--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -60,7 +60,10 @@
     "import/no-extraneous-dependencies": [
       "error",
       { "devDependencies": ["**/*.spec.js"] }
-    ]
+    ],
+    "@typescript-eslint/no-unused-vars": ["error", {
+      "argsIgnorePattern": "_"
+    }]
   },
   "settings": {
     "import/resolver": {
