--- a/package.json
+++ b/package.json
@@ -7,12 +7,18 @@
     "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/server.ts"
   },
   "dependencies": {
+    "csv-parse": "^4.15.4",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
-    "uuidv4": "^6.2.7"
+    "multer": "^1.4.2",
+    "swagger-ui-express": "^4.1.6",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
+    "@types/multer": "^1.4.5",
+    "@types/swagger-ui-express": "^4.1.2",
+    "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.22.1",
     "@typescript-eslint/parser": "^4.22.1",
     "eslint": "^7.25.0",
