--- a/package.json
+++ b/package.json
@@ -6,18 +6,23 @@
   "scripts": {
     "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/shared/infra/http/server.ts",
     "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
+    "seed:admin": "ts-node-dev -r tsconfig-paths/register src/shared/infra/typeorm/seed/admin.ts",
     "test": "jest"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "class-transformer": "^0.4.0",
     "csv-parse": "^4.15.4",
+    "dayjs": "^1.10.5",
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "multer": "^1.4.2",
     "pg": "^8.6.0",
     "reflect-metadata": "^0.1.13",
+    "supertest": "^6.1.4",
     "swagger-ui-express": "^4.1.6",
     "tsyringe": "^4.5.0",
     "typeorm": "^0.2.32",
@@ -28,7 +33,9 @@
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.23",
     "@types/jsonwebtoken": "^8.5.1",
+    "@types/lodash": "^4.14.170",
     "@types/multer": "^1.4.5",
+    "@types/supertest": "^2.0.11",
     "@types/swagger-ui-express": "^4.1.2",
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.22.1",
