--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,8 @@ services:
       - POSTGRES_USER=rentx
       - POSTGRES_PASSWORD=${DB_PASSWORD}
       - POSTGRES_DB=rentx
-    ports:
-      - 5432:5432
+    # ports:
+    #   - 5432:5432
     volumes:
       - $HOME/dataset/rentx/postgres:/var/lib/postgresql/data
     networks:
@@ -20,7 +20,6 @@ services:
     container_name: rentx-api
     ports:
       - 3333:3333
-      - 3000:3000
     volumes:
       - .:/usr/app
     depends_on:
