--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,10 +18,12 @@ services:
   backend:
     build: .
     container_name: rentx-api
+    entrypoint: dockerize -wait tcp://postgres:5432 -timeout 50s -wait-retry-interval 10s ./docker-entrypoint.sh
+    command: yarn start
     ports:
       - 3333:3333
-    volumes:
-      - .:/usr/app
+    # volumes:
+    #   - .:/usr/app
     depends_on:
       - postgres
     networks:
